Changes towards version 0.3:
- Fix some glitches in load/save screen (bug #163), from chmmravatar
- Utwig shield now pulsates properly (bug #269), from Nic
- Fix for memory leak in TFB_DrawCanvas_ExtractPalette (bug #277),
  from Richard Braakman
- Patched Umgah dialogue, fixing bug #8
- Crossfade code now explicitly caches the screen to transition from, and
  thus no longer glitches.  The code needed a slight rewrite, but this
  does fix bug #33 -McMartin
- Melee scaling is now trilinear by default, but it's still possible to
  choose nearest neighbour with --meleescale; fixes #34 -Mika
- Minimum scaling extent is now 1,1; fixes mostly small-objects-disappearing
  problem in melee, from chmmravatar
- Fixed a long standing memory leak relating  to planet surface -PhracturedBlue
- Scaled images no longer allocate/free memory all the time -McMartin
- Planet spin on lander launch/return is now enabled -PhracturedBlue
- Fix skipping after planet scan, landing (closes bug 31) -PhracturedBlue
- Decelerate when entering orbit to give a smoother effect -PhracturedBlue
- fix subtitle text overlap issues (bug 232)
- 'Esc' now leaves planet surface (bug233) -PhracturedBlue
- Fix race on exiting starbase (bug 230) -PracturedBlue
- Cleanup shipyard door animation (bug 215) -PhracturedBlue
- Misc .ani fixes; Fixes asteroid destruction crash (bugs 150, 155, 158)
  and somewhat fixes Mycon potrait (bug #183) -fOSSiL
- Moved image scaling to DCQ thread; fixes scale-out-of-sync problem 
  in melee -Mika
- Fix lockup in cyborg melee (fixes 204 and 218) from chmmravatar
- Added -g option to control gamma correction, from chmmravatar
- Restored the CondBank to actually use condition variables properly
  (resolves a race condition under OpenBSD)
- Removed aspects of the legacy graphics code that are never used or that
  are redundant.  More 'C-like' use of the PRIMITIVE datatype.
- Fix various graphics glitches during  dialog.  Especially Spathi Eye,and ZFP